apply google java style, add checkstyle coverage to ci